# server/main.go
@@ -22,7 +22,7 @@ func SetupRouter() *gin.Engine {
 	// 注册 API 文档路由
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	// 创建 relay 分组路由
+	// relay
 	relayGroup := router.Group("/relay")
 	{
 		relayGroup.GET("/type/:type", handler.GetRelayHandler)              // 根据 relayType 获取 relay 列表
@@ -30,6 +30,12 @@ func SetupRouter() *gin.Engine {
 		relayGroup.DELETE("/:id", handler.DelRelayByIdHandler)              // 根据 id 删除 relay
 		relayGroup.POST("/upsert", handler.UpsertRelayHandler)              // 插入或更新 relay
 		relayGroup.GET("/password/:pwd", handler.GetRelayByPasswordHandler) // 根据 password 获取 relay
+	}
+
+	// music
+	musicGroup := router.Group("/music")
+	{
+		musicGroup.POST("/upsert", handler.UpsertMusicHandler) // 插入或更新 music
 	}
 
 	return router
